--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "url": "git://github.com/codetunnel/mongoose-auto-increment.git"
   },
   "dependencies": {
-    "extend": "^3.0.0"
+    "extend": "*"
   },
   "peerDependencies": {
-    "mongoose": "^4.1.12"
+    "mongoose": "*"
   },
   "devDependencies": {
     "async": "*",
     "chai": "*",
     "mocha": "*",
-    "mongoose": "^4.1.12"
+    "mongoose": "*"
   },
   "keywords": [
     "mongoose",
